--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -6,15 +6,22 @@
 
 class: center, middle
 
-# Title
+# The .NET Core Presentation
+### (The presentation of the presentation)
 
 ---
 
 # Agenda
 
-1. Introduction
-2. Deep-dive
-3. ...
+1. What and Why .NET Core
+2. Future BD3
+3. Creating your first app
+4. Actually creating your first app
+5. .NET Standard and You
+6. Sharing code
+7. Time Permitting:
+    - Docker
+    - Testing
 
 ---
 
