--- a/src/app/Views/Home/Index.cshtml
+++ b/src/app/Views/Home/Index.cshtml
@@ -16,7 +16,7 @@ class: center
 
 .content[
 1. What and Why .NET Core
-2. Future BD3
+2. How we will use it in future BD3
 3. Creating your first app
 4. .NET Standard and You
 5. Sharing code
