--- a/src/app/Views/Home/Index.cshtml
+++ b/src/app/Views/Home/Index.cshtml
@@ -47,11 +47,13 @@ class: center
 ### (why we want to use it)
 
 .content[
+* Logical domain of work
+* Minimal external dependencies which are decoupled from component
 * Goals
     - Independently deployable
     - Isolate change and faults
     - Use right tool for the job
-    - Scalable units
+    - Scalablability
     - Increase developer autonomy
 ]
 
